# Black_Hole_Assembly

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE.rd  ASSEMBLY.md  ASSEMBLY_COMPLETE.md  ASSEMBLY_IMPLEMENTATION.md  ASSEMBLY_SYNTAX_FIX.md  BUILD_READY.md  CLAUDE.md  CMakeLists.txt  INTEGRATION_GUIDE.md  PHYSICS.md  QUICK_START.md  README.md  TECHNICAL_HIGHLIGHTS.md  black_hole_curv.cpp  black_hole_space.cpp  black_hole_space_cpu.cpp  black_hole_space_cuda.cu  black_hole_space_metal.mm  build_and_run.sh  build_asm_demo.sh  common.hpp  geodesic.comp  gravity_grid.cpp  grid.frag  grid.vert  physics_asm.hpp  physics_asm.s  physics_asm_arm64.S  physics_asm_demo.cpp  run_simulation.sh
.github/workflows/: build.yml
